test/corpus/match.txt
================================================================================
Constructor list string and wildcard patterns
================================================================================

def respond (String -> String) {
    match {
        Ok(value) -> value
        Err(error as e) -> e
        [] -> ""
        [head ... tail] -> head
        "" -> "empty"
        "say " ... rest -> rest
        0i64 -> "zero"
        boolean::True -> "t"
        * -> "other"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (function_signature
      (type_list
        (type_reference
          (identifier)))
      (type_list
        (type_reference
          (identifier))))
    (block
      (match_expression
        (match_arm
          pattern: (constructor_pattern
            name: (identifier)
            (field_binding
              name: (identifier)))
          body: (identifier))
        (match_arm
          pattern: (constructor_pattern
            name: (identifier)
            (field_binding
              name: (identifier)
              alias: (identifier)))
          body: (identifier))
        (match_arm
          pattern: (list_pattern)
          body: (string))
        (match_arm
          pattern: (list_pattern
            (identifier)
            (rest_pattern)
            rest: (identifier))
          body: (identifier))
        (match_arm
          pattern: (string_pattern
            (string))
          body: (string
            (string_content)))
        (match_arm
          pattern: (string_pattern
            (string
              (string_content))
            (rest_pattern)
            rest: (identifier))
          body: (identifier))
        (match_arm
          pattern: (number)
          body: (string
            (string_content)))
        (match_arm
          pattern: (scoped_identifier)
          body: (string
            (string_content)))
        (match_arm
          pattern: (wildcard_pattern)
          body: (string
            (string_content)))))))
