test/corpus/types.txt
================================================================================
Enum and generic record types
================================================================================

type Boolean {
    False True
}

type Result<a b> {
    Ok(value a) Err(error b)
}

type List<a> {
    Empty
    List(next List<a> element a)
}

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (type_identifier)
    (variant
      name: (type_identifier))
    (variant
      name: (type_identifier)))
  (type_definition
    name: (type_identifier)
    (type_parameters
      (identifier)
      (identifier))
    (variant
      name: (type_identifier)
      (variant_fields
        (field
          name: (identifier)
          type: (type_reference
            (identifier)))))
    (variant
      name: (type_identifier)
      (variant_fields
        (field
          name: (identifier)
          type: (type_reference
            (identifier))))))
  (type_definition
    name: (type_identifier)
    (type_parameters
      (identifier))
    (variant
      name: (type_identifier))
    (variant
      name: (type_identifier)
      (variant_fields
        (field
          name: (identifier)
          type: (type_reference
            (identifier)
            (type_arguments
              (type_reference
                (identifier)))))
        (field
          name: (identifier)
          type: (type_reference
            (identifier)))))))

